.kubernetes/middlewares.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: xframe-header
  namespace: ycare-$ENV
spec:
  headers:
    customResponseHeaders:
      X-Frame-Options: "DENY"
      Content-Security-Policy: "frame-ancestors 'none'"

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cors-policy
  namespace: ycare-$ENV
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
      - "POST"
      - "OPTIONS"
    accessControlAllowOriginList:
      - "*"
    accessControlAllowHeaders:
      - "Accept"
      - "Content-Type"
      - "User-Agent"
      - "Cache-Control"
      - "Authorization"
      - "Referer"
      - "X-YCare-Latitude"
      - "X-YCare-Longitude"
      - "X-YCare-Device-Id"
    accessControlMaxAge: 100
    addVaryHeader: true

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ratelimit-policy
  namespace: ycare-$ENV
spec:
  rateLimit:
    average: 200
    period: 1
    burst: 60

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
  namespace: ycare-$ENV
spec:
  redirectScheme:
    scheme: https
    permanent: true

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: security-header
  namespace: ycare-$ENV
spec:
  headers:
    sslRedirect: true
    sslTemporaryRedirect: true
    frameDeny: true
    browserXssFilter: true
    customResponseHeaders:
      Content-Security-Policy: "frame-ancestors 'none'"
      Strict-Transport-Security: "max-age=31536000"
