.kubernetes/4.1.redis.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: redis
  namespace: wheel-$ENV
  labels:
    name: redis-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-pod
  template:
    metadata:
      labels:
        app: redis-pod
    spec:
      containers:
        - name: redis-pod
          image: redis
          imagePullPolicy: IfNotPresent
          ports:
            - name: tcp-redis
              containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis-srv
  namespace: wheel-$ENV
spec:
  type: ClusterIP
  selector:
    app: redis-pod
  ports:
    - name: tcp-redis
      protocol: TCP
      port: 6379
