.kubernetes/8.management.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: phpmyadmin
  namespace: wheel-$ENV
  labels:
    name: phpmyadmin-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin-pod
  template:
    metadata:
      labels:
        app: phpmyadmin-pod
    spec:
      containers:
        - name: phpmyadmin-pod
          image: phpmyadmin
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-srv
  namespace: wheel-$ENV
spec:
  type: ClusterIP
  selector:
    app: phpmyadmin-pod
  ports:
    - name: http
      protocol: TCP
      port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: phpmyadmin-ingress
  namespace: wheel-$ENV
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`db.vongquay.vn`)
      kind: Rule
      services:
        - name: phpmyadmin-srv
          port: 80
      middlewares:
        - name: whitelist-middleware
  tls:
    certResolver: esd-resolver

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: redisinsight
  namespace: wheel-$ENV
  labels:
    name: redisinsight-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redisinsight-pod
  template:
    metadata:
      labels:
        app: redisinsight-pod
    spec:
      containers:
        - name: redisinsight-pod
          image: redislabs/redisinsight
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8001

---
apiVersion: v1
kind: Service
metadata:
  name: redisinsight-srv
  namespace: wheel-$ENV
spec:
  type: ClusterIP
  selector:
    app: redisinsight-pod
  ports:
    - name: http
      protocol: TCP
      port: 8001

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: redisinsight-ingress
  namespace: wheel-$ENV
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`redis.vongquay.vn`)
      kind: Rule
      services:
        - name: redisinsight-srv
          port: 8001
      middlewares:
        - name: whitelist-middleware
  tls:
    certResolver: esd-resolver

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: whitelist-middleware
  namespace: wheel-$ENV
spec:
  ipWhiteList:
    sourceRange:
      - 163.44.206.87/32
